h1. CHANGELOG
h2. 1.1.4 February 21, 2012

* fix 'email_spec' configuration in 'rspec' recipe
* fix typo for machinist in 'rspec' recipe

h2. 1.1.3 February 21, 2012

* add 'email_spec' gem to 'rspec' recipe
* update gem 'cucumber-rails' from 1.2.1 to 1.3.0
* update gem 'factory_girl_rails' from 1.6.0 to 1.7.0
* update gem 'devise' from 2.0.0 to 2.0.4
* update gem 'mongoid' from 2.4.3 to 2.4.4
* update gem 'bson_ext' from 1.3.1 to 1.5.2
* update gem 'rails-backbone' from 0.6.1 to 0.7.0
* update gem 'compass' from 0.12.alpha.4 to 0.12.rc.1
* update gem 'bootstrap-sass' from 2.0.0 to 2.0.1
* fix typo for machinist in 'rspec' recipe

h2. 1.1.2 February 12, 2012

* fix Twitter Bootstrap in the 'html5' recipe
* warn that 'rails-footnotes' is SLOW in the 'extras' recipe

h2. 1.1.1 February 4, 2012

* bugfix in 'rspec' recipe: call machinist:install generator
* require 'rake' in the gemspec file to avoid 'could not find rake' failures

h2. 1.1.0 January 28, 2012

* remove support for Rails 3.0 (require Rails 3.1 or newer)
* remove 'application_layout' recipe (use html5 recipe instead)
* remove 'jquery' recipe (jQuery installed by default for Rails 3.1)
* remove 'draggable' recipe (not maintained)
* remove 'env_yaml' recipe (not maintained)
* remove 'jammit' recipe (not maintained)
* remove 'mongo_mapper' recipe (not maintained)
* remove 'mootools' recipe (not maintained)
* remove 'pow' recipe (not maintained)
* remove 'prototype' recipe (not maintained)
* remove 'redis' recipe (not maintained)
* remove 'redistogo' recipe (not maintained)
* remove 'rightjs' recipe (not maintained)
* remove 'sequel' recipe (not maintained)
* remove 'slim' recipe (not maintained)
* remove 'test_unit' recipe (not maintained)
* incorporate 'ban_spiders' recipe in 'extras' recipe
* update gem 'rails-backbone' from 0.5.3 to 0.6.1
* update gem 'compass' from 0.12.alpha.0 to 0.12.alpha.4
* update gem 'cucumber-rails' from 1.2.0 to 1.2.1
* update gem 'database_cleaner' from 0.7.0 to 0.7.1